<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".User.Diagnosa"
    android:background="@drawable/bg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/diagnosakembali"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bck"
                android:layout_marginEnd="25dp"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DIAGNOSA"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="27dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nmrdiag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="1/23"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nmgejaladiag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="GEJALA"
                    android:textColor="@color/black"
                    android:textSize="19dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rgdiagnosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:paddingBottom="10dp">

                    <RadioButton
                        android:id="@+id/rb_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bluePrimary"
                        android:buttonTint="@color/bluePrimary"
                        android:padding="10dp"
                        android:text="@string/tidak"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bluePrimary"
                        android:buttonTint="@color/bluePrimary"
                        android:padding="10dp"
                        android:text="@string/mungkin_tidak"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bluePrimary"
                        android:buttonTint="@color/bluePrimary"
                        android:padding="10dp"
                        android:text="@string/mungkin"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bluePrimary"
                        android:buttonTint="@color/bluePrimary"
                        android:padding="10dp"
                        android:text="@string/kemungkinan_besar"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bluePrimary"
                        android:buttonTint="@color/bluePrimary"
                        android:padding="10dp"
                        android:text="@string/hampir_pasti"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/bluePrimary"
                        android:buttonTint="@color/bluePrimary"
                        android:padding="10dp"
                        android:text="@string/pasti"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </RadioGroup>

                <Button
                    android:id="@+id/butdiagnosa"
                    android:layout_width="250dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/cusbut"
                    android:text="LANJUT"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/butlangdiagnosa"
                    android:layout_width="250dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/cusbut"
                    android:text="DIAGNOSA"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>